fix [MAILWEB-1177] spacing subscription on mobile

--- a/packages/styles/_sass/reusable-components/_design-system-responsive.scss
+++ b/packages/styles/_sass/reusable-components/_design-system-responsive.scss
@@ -135,7 +135,10 @@
         flex-basis: auto;
       }
       &.flex-autogrid {
-        margin: 0;
+		margin: 0;
+		&.mb1 {
+			margin-bottom: 1em;
+		}
       }
       & > .flex-autogrid-item {
         padding: 0;
